# serial_interface_python

./: .channels.scm  .emacs  .gitignore  .guix.scm  .metadata.org  .single-source-of-truth.org  DESCRIPTION.rst  DEVELOPMENT.md  LICENSE  MANIFEST.in  Makefile  README.md  README.org  channels.scm  codemeta.json  guix.scm  pyproject.toml  setup.cfg  setup.py
.metadata-python/: .alias  Makefile  metadata.org
.metadata-python/emacs/: init.el
.metadata-python/guix/: channels.scm  guix.scm
serial_interface/: __about__.py  __init__.py  serial_interface.py
