# setup.cfg is generated automatically from .single-source-of-truth.org
# File edits may be overwritten!
[metadata]
name = serial_interface
version = 2.3.0
author = Peter Polidoro
author_email = peter@polidoro.io
url = https://github.com/janelia-pypi/serial_interface_python
description = Extends pyserial Serial to add convenience methods.
long_description = file: README.md
long_description_content_type = text/markdown
license = BSD 3-Clause License
classifiers =
    Programming Language :: Python :: 3

[options]
packages = find:
install_requires =
    pyserial
